// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetDetailPage TargetDetailPage should render data correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background: rgba(219, 241, 255, 0.46); position: relative; height: 120px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <a
          href="/account/dummy/cf/orgs/dummy/projects/dummy/targets"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          pipeline.targets.title
        </a>
        <span>
          /
        </span>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="margin-left: -5px;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="border-radius: 50%; overflow: hidden;"
        >
          <div
            class="avatar Avatar--Avatar Avatar--contentStyle"
            style="cursor: default;"
          >
            <span
              class="bp3-popover-wrapper Avatar--avatarPopOver"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="Avatar--AvatarInner"
                  style="border-radius: 100%; line-height: 42px; width: 48px; height: 48px; font-size: 18px;"
                  tabindex="0"
                >
                  T
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-size: 20px;"
          >
            t1
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--padding-top-xsmall"
          >
            cf.targetDetail.createdOnDate
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 15px; right: 25px;"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 4 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 76px; right: 30px;"
    >
      <span>
        cf.targetDetail.environmentLine
      </span>
    </p>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100% - 120px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="flex-grow: 1; height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="background: rgb(248, 250, 251); overflow: auto; min-width: 480px; width: 480px; height: 100%;"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
            level="3"
            style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; padding-bottom: 0px;"
          >
            cf.targetDetail.targetSetting
          </h3>
          <div
            class="StyledProps--font StyledProps--main tabContainer"
          >
            <div
              class="bp3-tabs Tabs--main Tabs--horizontal"
            >
              <div
                class="bp3-tab-list"
                role="tablist"
              >
                <div
                  class="bp3-tab-indicator-wrapper"
                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                >
                  <div
                    class="bp3-tab-indicator"
                  />
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_attributes"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-selected="true"
                  class="bp3-tab"
                  data-tab-id="attributes"
                  id="bp3-tab-title_targetSettings_attributes"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.targetDetail.attributes
                  </p>
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_segments"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-selected="false"
                  class="bp3-tab"
                  data-tab-id="segments"
                  id="bp3-tab-title_targetSettings_segments"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.shared.segments
                  </p>
                </div>
              </div>
              <div
                aria-hidden="false"
                aria-labelledby="bp3-tab-title_targetSettings_attributes"
                class="bp3-tab-panel"
                id="bp3-tab-panel_targetSettings_attributes"
                role="tabpanel"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--padding-bottom-xxlarge StyledProps--padding-left-small StyledProps--padding-right-small"
                    style="color: rgb(107, 109, 133); font-size: 12px; line-height: 150%;"
                  >
                    <span>
                      cf.targetDetail.learnMore
                    </span>
                  </p>
                  <div
                    class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-medium"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      cf.targetDetail.attribute
                    </p>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                      style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                        style="color: rgb(34, 34, 42); font-size: 12px; font-weight: 500; line-height: 16px;"
                      >
                        identifier
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="line-height: 24px;"
                      >
                        t1
                      </p>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                      style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                        style="color: rgb(34, 34, 42); font-size: 12px; font-weight: 500; line-height: 16px;"
                      >
                        name
                      </p>
                      <p
                        class="StyledProps--font StyledProps--main"
                        style="line-height: 24px;"
                      >
                        t1
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="overflow: auto; flex-grow: 1; background: rgb(252, 253, 253); flex-direction: column; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
            style="width: 100%; position: sticky; top: 0px; z-index: 2; background: rgb(252, 253, 253);"
          >
            <h3
              class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
              level="3"
              style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; align-self: baseline;"
            >
              cf.targetDetail.flagSetting
            </h3>
            <span
              style="flex-grow: 1;"
            />
            <div
              class="StyledProps--font StyledProps--main"
              style="align-self: baseline; height: 35px;"
            >
              <div
                class="bp3-input-group ui-search-box ExpandingSearchInput--main  "
                data-name=""
              >
                <span
                  class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
                  icon="search"
                >
                  <svg
                    data-icon="search"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      search
                    </desc>
                    <path
                      d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input "
                  dir="auto"
                  placeholder="cf.targetDetail.searchPlaceholder"
                  style="padding-right: 42px;"
                  type="search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
            style="flex-grow: 1; width: 100%; display: flex; flex-direction: column; position: relative;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TargetDetailPage TargetDetailPage should render its segments 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background: rgba(219, 241, 255, 0.46); position: relative; height: 120px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <a
          href="/account/dummy/cf/orgs/dummy/projects/dummy/targets"
          style="color: rgb(0, 146, 228); font-size: 12px;"
        >
          pipeline.targets.title
        </a>
        <span>
          /
        </span>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
        style="margin-left: -5px;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="border-radius: 50%; overflow: hidden;"
        >
          <div
            class="avatar Avatar--Avatar Avatar--contentStyle"
            style="cursor: default;"
          >
            <span
              class="bp3-popover-wrapper Avatar--avatarPopOver"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="Avatar--AvatarInner"
                  style="border-radius: 100%; line-height: 42px; width: 48px; height: 48px; font-size: 18px;"
                  tabindex="0"
                >
                  T
                </div>
              </span>
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main"
            style="font-size: 20px;"
          >
            t1
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400 StyledProps--padding-top-xsmall"
          >
            cf.targetDetail.createdOnDate
          </p>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 15px; right: 25px;"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="Options"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 4 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
      style="position: absolute; top: 76px; right: 30px;"
    >
      <span>
        cf.targetDetail.environmentLine
      </span>
    </p>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100% - 120px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="flex-grow: 1; height: 100%;"
    >
      <div
        class="Layout--horizontal StyledProps--main"
        style="height: 100%;"
      >
        <div
          class="StyledProps--font StyledProps--main"
          style="background: rgb(248, 250, 251); overflow: auto; min-width: 480px; width: 480px; height: 100%;"
        >
          <h3
            class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
            level="3"
            style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; padding-bottom: 0px;"
          >
            cf.targetDetail.targetSetting
          </h3>
          <div
            class="StyledProps--font StyledProps--main tabContainer"
          >
            <div
              class="bp3-tabs Tabs--main Tabs--horizontal"
            >
              <div
                class="bp3-tab-list"
                role="tablist"
              >
                <div
                  class="bp3-tab-indicator-wrapper"
                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                >
                  <div
                    class="bp3-tab-indicator"
                  />
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_attributes"
                  aria-disabled="false"
                  aria-expanded="false"
                  aria-selected="false"
                  class="bp3-tab"
                  data-tab-id="attributes"
                  id="bp3-tab-title_targetSettings_attributes"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.targetDetail.attributes
                  </p>
                </div>
                <div
                  aria-controls="bp3-tab-panel_targetSettings_segments"
                  aria-disabled="false"
                  aria-expanded="true"
                  aria-selected="true"
                  class="bp3-tab"
                  data-tab-id="segments"
                  id="bp3-tab-title_targetSettings_segments"
                  role="tab"
                  tabindex="0"
                >
                  <p
                    class="StyledProps--font StyledProps--main tabTitle"
                  >
                    cf.shared.segments
                  </p>
                </div>
              </div>
              <div
                aria-hidden="false"
                aria-labelledby="bp3-tab-title_targetSettings_segments"
                class="bp3-tab-panel"
                id="bp3-tab-panel_targetSettings_segments"
                role="tabpanel"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                    style="align-items: center;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      cf.targetDetail.manuallyAdded
                    </p>
                    <span
                      style="flex-grow: 1;"
                    />
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cf.targetDetail.addToSegment
                      </span>
                    </button>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                    style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-xsmall StyledProps--color StyledProps--color-grey400"
                      style="text-align: center;"
                    >
                      cf.targetDetail.noSegmentAdded
                    </p>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                    style="align-items: center;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-small StyledProps--padding-bottom-small"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      cf.targetDetail.autoAdded
                    </p>
                    <span
                      style="flex-grow: 1;"
                    />
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                    style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-xsmall StyledProps--color StyledProps--color-grey400"
                      style="text-align: center;"
                    >
                      cf.targetDetail.noSegmentMatched
                    </p>
                  </div>
                </div>
                <div
                  class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-right-xxlarge StyledProps--padding-left-xxlarge StyledProps--padding-bottom-xxlarge"
                >
                  <div
                    class="Layout--horizontal StyledProps--main"
                    style="align-items: center;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--padding-left-small"
                      style="color: rgb(79, 81, 98); font-size: 10px; font-weight: bold;"
                    >
                      cf.targetDetail.exclusionList
                    </p>
                    <span
                      style="flex-grow: 1;"
                    />
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        cf.targetDetail.excludefromSegment
                      </span>
                    </button>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main StyledProps--padding-medium"
                    style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 8px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--background-white StyledProps--padding-xsmall StyledProps--color StyledProps--color-grey400"
                      style="text-align: center;"
                    >
                      cf.targetDetail.noSegmentExcluded
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--flex"
          style="overflow: auto; flex-grow: 1; background: rgb(252, 253, 253); flex-direction: column; height: 100%;"
        >
          <div
            class="Layout--horizontal StyledProps--main"
            style="width: 100%; position: sticky; top: 0px; z-index: 2; background: rgb(252, 253, 253);"
          >
            <h3
              class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--padding-xxlarge"
              level="3"
              style="font-size: 14px; color: rgb(34, 39, 45); font-weight: 600; align-self: baseline;"
            >
              cf.targetDetail.flagSetting
            </h3>
            <span
              style="flex-grow: 1;"
            />
            <div
              class="StyledProps--font StyledProps--main"
              style="align-self: baseline; height: 35px;"
            >
              <div
                class="bp3-input-group ui-search-box ExpandingSearchInput--main  "
                data-name=""
              >
                <span
                  class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
                  icon="search"
                >
                  <svg
                    data-icon="search"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      search
                    </desc>
                    <path
                      d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <input
                  class="bp3-input "
                  dir="auto"
                  placeholder="cf.targetDetail.searchPlaceholder"
                  style="padding-right: 42px;"
                  type="search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
            style="flex-grow: 1; width: 100%; display: flex; flex-direction: column; position: relative;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
